# sparrow-ml

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: README.md
configs/: project.yaml
configs/experiments/: fp32_sensor_baseline.yaml  int8_ptq_baseline.yaml  multilayer_int8_baseline.yaml  sparrow_v_export.yaml  sparrow_v_multilayer_runtime.yaml  sparrow_v_runtime.yaml  sparse_2of4_baseline.yaml  wisdm_activity_recognition.yaml
configs/targets/: sparrow_v.yaml
data/: README.md
docs/: architecture.md  build_roadmap.md  codex_context.md  codex_milestone_prompt.md  codex_milestone_result.md  current_milestone.md  data_contracts.md  experiment_policy.md  multilayer_quantization_contract.md  portfolio_summary.md  release_checklist.md  reproduction.md  source_manifest.md  sparrow_v_export_contract.md  sparrow_v_multilayer_runtime_contract.md  sparrow_v_runtime_contract.md  wisdm_data_contract.md  wisdm_evaluation_protocol.md
docs/decisions/: ADR-001-repository-boundary.md
docs/results/: final_results.md  final_wisdm_results.md  phase1_fp32_baseline.md  phase2_int8_ptq.md  (+8 more)
examples/: README.md
experiments/: README.md
scripts/: check_repo.py  run_milestone.sh  smoke_test.py
tests/: test_artifact_schemas.py  test_config.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase5_integration.py  test_phase6.py  test_phase7.py  test_phase7_integration.py  test_phase8a.py  test_phase8b.py  test_phase8c.py  test_phase8c_integration.py  test_smoke.py  test_sparrow_v_contract.py
(+49 files in other folders)
