[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sparrowml"
version = "0.1.0"
description = "Local-first ML systems tooling for Sparrow-V deployment"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "PyYAML>=6.0", "torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sparrowml = "sparrowml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: requires a compatible local Sparrow-V checkout"]
